# pupilfirst

./: .gitignore  Makefile  dune  dune-project  package.json  pupilfirst.opam
app/frontend/admin/courses/: CohortsActions__Root.re  CohortsActions__Root.res  CohortsCreator__Root.re  CohortsDetails__Root.re  CohortsDetails__Root.res  CohortsIndex__Root.re  CourseEditor__Root.re  StudentActions__Root.re  StudentActions__Root.res  StudentBulkImport__Root.re  StudentBulkImport__Root.res  StudentCreator__Root.re  StudentCreator__Root.res  StudentDetails__Root.re  StudentDetails__Root.res  StudentsIndex__Root.re  TeamsActions__Root.re  TeamsActions__Root.res  TeamsCreator__Root.re  TeamsDetails__Root.re  TeamsDetails__Root.res  TeamsIndex__Root.re
app/frontend/admin/courses/course_editor/: CourseEditor__Form.re  CourseEditor__HighlightsEditor.re  CourseEditor__ImagesForm.re
app/frontend/admin/courses/shared/: AdminCoursesShared__CohortsEditor.re  AdminCoursesShared__StudentsPicker.re  AdminCoursesShared__TeamEditor.re
app/frontend/admin/courses/student_creator/: StudentCreator__CreateForm.re  StudentCreator__StudentInfoForm.re
app/frontend/communities/: CommunitiesNewTopic__Root.re  CommunitiesShow__Root.re
app/frontend/communities/components/: CommunitiesShow__Participants.re
app/frontend/communities/types/: CommunitiesNewTopic__TopicSuggestion.re  CommunitiesShow__Target.re  CommunitiesShow__Topic.re  CommunitiesShow__TopicParticipant.re  CommunitiesShow__Topics.re
app/frontend/courses/curricula/components/: CoursesCurriculum.re  CoursesCurriculum__AudioRecorder.re  CoursesCurriculum__AutoVerify.re  CoursesCurriculum__CompletionInstructions.re  CoursesCurriculum__Discuss.re  CoursesCurriculum__FileForm.re  CoursesCurriculum__GradeBar.re  CoursesCurriculum__Learn.re  CoursesCurriculum__LevelSelector.re  CoursesCurriculum__LevelUpButton.re  CoursesCurriculum__NoticeManager.re  CoursesCurriculum__Overlay.re  CoursesCurriculum__Quiz.re  CoursesCurriculum__SubmissionBuilder.re  CoursesCurriculum__SubmissionItem.re  CoursesCurriculum__SubmissionsAndFeedback.re  CoursesCurriculum__SubmissionsAndFeedback.res  CoursesCurriculum__UndoButton.re  CoursesCurriculum__UrlForm.re
app/frontend/courses/curricula/types/: CoursesCurriculum__ChecklistItem.re  CoursesCurriculum__Coach.re  CoursesCurriculum__Community.re  CoursesCurriculum__Course.re  CoursesCurriculum__Feedback.re  CoursesCurriculum__Grade.re  CoursesCurriculum__Grading.re  CoursesCurriculum__LatestSubmission.re  CoursesCurriculum__Level.re  CoursesCurriculum__LevelUpEligibility.re  CoursesCurriculum__Notice.re  CoursesCurriculum__QuizQuestion.re  CoursesCurriculum__Student.re  CoursesCurriculum__Submission.re  CoursesCurriculum__Target.re  CoursesCurriculum__TargetDetails.re  CoursesCurriculum__TargetGroup.re  CoursesCurriculum__TargetStatus.re  CoursesCurriculum__Types.re  CoursesCurriculum__User.re
app/frontend/courses/report/components/: CoursesReport__Overview.re  CoursesReport__Root.re  (+1 more)
app/frontend/courses/review/: CoursesReview__Root.re
app/frontend/faculty/: CoachesIndex__Root.re
app/frontend/faculty/types/: CoachesIndex__Coach.re  CoachesIndex__Course.re
app/frontend/home/styleguide/: HomeStyleguide__MarkdownSyntaxHighlightingPreview.re  HomeStyleguide__SkeletonLoadingPreview.re
app/frontend/issued_certificates/: IssuedCertificate__Root.re  VerifyCertificate__Root.re
app/frontend/layouts/app_router/: AppRouter.re
app/frontend/layouts/school_router/: SchoolRouter.re
app/frontend/layouts/shared/: Layout__UserControls.re
app/frontend/layouts/student/: StudentTopNav.re
app/frontend/notifications/: Notifications__Root.re
app/frontend/notifications/components/: Notifications__EntryCard.re  Notifications__List.re
app/frontend/notifications/types/: Notifications__Entry.re  Notifications__Types.re
app/frontend/packs/: AppRouterPack.re  ConvertMarkdownPack.re  CoursesCurriculumPack.re  SchoolRouterPack.re  SchoolsCoursesAuthorsPack.re  SchoolsCoursesCurriculumPack.re  StudentCourseLayoutPack.re  StudentTopNavPack.re  UserSessionNewPack.re
app/frontend/schools/communities/: SchoolCommunities__Index.re
app/frontend/schools/components/: SchoolAdmin__EditorDrawer.re  SchoolAdmin__EditorDrawer2.re
app/frontend/schools/types/: Admin__User.re  SchoolAdmin.re
app/frontend/shared/: Api.re  Avatar.re  Notification.re  WebPushSubscriptionManager.re
app/frontend/shared/components/: CSVReader.re  Checkbox.re  ClickToCopy.re  ConfirmWindow.re  Countdown.re  CourseResourcesFilter.re  DatePicker.re  DisablingCover.re  DoughnutChart.re  Dropdown.re  Dropdown2.re  EditorDrawer.re  EmojiPicker.re  EmptyState.re  ErrorState.re  EventCard.re  HelpIcon.re  LevelProgressBar.re  Link.re  LoadingSpinner.re  MarkdownBlock.re  MarkdownEditor.re  QrCode.re  Radio.re  Select.re  SimpleDropdownFilter.re  SkeletonLoading.re  Sorter.re  TargetContentView.re  Tooltip.re
app/frontend/shared/types/: Cohort.re  ContentBlock.re  CourseInfo.re  EvaluationCriterion.re  GradeLabel.re  IssuedCertificate.re  Loading.re  LoadingV2.re  TopicCategory.re  User.re  UserDetails.re  UserProxy.re
app/frontend/shared/utils/: ArrayUtils.re  AuthenticityToken.re  DOMPurify.re  DateFns.re  DateFns.rei  DateTime.re  Debug.re  DomUtils.re  EmailUtils.re  EnvUtils.re  FileUtils.re  GraphqlErrorHandler.re  GraphqlQuery.re  Helmet.re  I18n.re  I18n.rei  I18n.res  LevelLabel.re  ListUtils.re  Locale.re  Markdown.re  OptionUtils.re  Pagination.re  PrismJs.re  PromiseUtils.re  Psj.re  ReactUtils.re  Rollbar.re  ScrollLock.re  StringUtils.re  TextareaAutosize.re  Toggle.re  Tus.re  UrlUtils.re
app/frontend/topics/: TopicsShow__Root.re
app/frontend/topics/components/: TopicsShow__LikeManager.re  TopicsShow__PostEditor.re  TopicsShow__PostReply.re  TopicsShow__PostShow.re  TopicsShow__SubscriptionManager.re  TopicsShow__UserShow.re
app/frontend/topics/types/: TopicsShow__Community.re  TopicsShow__LinkedTarget.re  TopicsShow__Post.re  TopicsShow__Topic.re
app/frontend/users/: UserEdit.re  UserSessionResetPassword.re  UsersDeleteAccount.re
(+190 files in other folders)
