(subdir
 app
 (subdir
  frontend
  (include_subdirs unqualified)
  (melange.emit
   (target output)
   (alias main)
   (preprocess
    (pps graphql_ppx melange.ppx reason-react-ppx))
   (libraries
    melange.belt
    melange-fetch
    melange-json
    melange-webapi
    reason-react)
   (module_systems es6))))
