opam-version: "2.0"
synopsis: "Pupilfirst"
description: """
A learning management system (LMS) that lets you run an asynchronous online
school, where learning is achieved through focused tasks, directed feedback,
an iterative workflow, and community interaction.
"""
maintainer: ["Pupilfirst Pvt. Ltd."]
authors: ["Pupilfirst Pvt. Ltd."]
license: "MIT"
homepage: "https://github.com/pupilfirst/pupilfirst"
bug-reports: "https://github.com/pupilfirst/pupilfirst/issues"
depends: [
  "ocaml" {>= "4.14.0" & < "5.0.0"}
  "reason" {>= "3.8.1" & < "4.0.0"}
  "dune" {>= "3.8.1"}
  "melange" {>= "1.0.0"}
  "reactjs-jsx-ppx" {>= "1.0.0"}
  "rescript-syntax" {>= "1.0.0"}
  "graphql_ppx" {dev}
  "ocaml-lsp-server" {dev}
  "dot-merlin-reader" {dev}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/pupilfirst/pupilfirst.git"
pin-depends: [
  [ "graphql_ppx.dev" "git+https://github.com/jchavarri/graphql-ppx.git#2598910886f1d2d3869406ae7eb787341d8dce6b" ]
]
