opam-version: "2.0"
synopsis: "Pupilfirst"
description: """
A learning management system (LMS) that lets you run an asynchronous online
school, where learning is achieved through focused tasks, directed feedback,
an iterative workflow, and community interaction.
"""
maintainer: ["Pupilfirst Pvt. Ltd."]
authors: ["Pupilfirst Pvt. Ltd."]
license: "MIT"
homepage: "https://github.com/pupilfirst/pupilfirst"
bug-reports: "https://github.com/pupilfirst/pupilfirst/issues"
depends: [
  "ocaml"
  "reason" {>= "3.8.1" & < "4.0.0"}
  "dune" {>= "3.8.1"}
  "melange"
  "melange-fetch"
  "melange-json"
  "melange-webapi"
  "reason-react"
  "graphql_ppx"
  "ocaml-lsp-server" {with-test}
  "ocamlformat" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/pupilfirst/pupilfirst.git"
pin-depends: [
  [ "graphql_ppx.dev" "git+https://github.com/jchavarri/graphql-ppx.git#59e5637065438bb1ecb3a6652a3bde024dc772cc" ]
]
