opam-version: "2.0"
synopsis: "Pupilfirst"
description: """
A learning management system (LMS) that lets you run an asynchronous online
school, where learning is achieved through focused tasks, directed feedback,
an iterative workflow, and community interaction.
"""
maintainer: ["Pupilfirst Pvt. Ltd."]
authors: ["Pupilfirst Pvt. Ltd."]
license: "MIT"
homepage: "https://github.com/pupilfirst/pupilfirst"
bug-reports: "https://github.com/pupilfirst/pupilfirst/issues"
depends: [
  "ocaml"
  "reason" {>= "3.8.1" & < "4.0.0"}
  "dune" {>= "3.8.1"}
  "melange"
  "melange-fetch"
  "melange-json"
  "melange-webapi"
  "reason-react"
  "graphql_ppx"
  "ocaml-lsp-server" {with-test}
  "ocamlformat" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/pupilfirst/pupilfirst.git"
pin-depends: [
  [ "graphql_ppx.dev" "https://github.com/jchavarri/graphql-ppx/archive/59e5637065438bb1ecb3a6652a3bde024dc772cc.tar.gz" ]
  [ "melange-json.dev" "https://github.com/melange-community/melange-json/archive/a8fe82f3aa3a55f7614c66f553092896bc1bbefa.tar.gz" ]
  [ "melange-fetch.dev" "https://github.com/melange-community/melange-fetch/archive/f8b80ce7c8d1487c4cc3dd4cbff86a49458660a2.tar.gz" ]
  [ "reason-react.dev" "https://github.com/reasonml/reason-react/archive/bfdf052064181846f527a12b26ac0cf6c46a69d9.tar.gz" ]
  [ "reason-react-ppx.dev" "https://github.com/reasonml/reason-react/archive/bfdf052064181846f527a12b26ac0cf6c46a69d9.tar.gz" ]
]
